--- a/vercel.json
+++ b/vercel.json
@@ -3,15 +3,5 @@
   "devCommand": "next dev",
   "installCommand": "npm install",
   "framework": "nextjs",
-  "regions": ["hnd1"],
-  "env": {
-    "DATABASE_URL": "@database_url",
-    "STORY_RPC_URL": "@story_rpc_url",
-    "STORY_PRIVATE_KEY": "@story_private_key",
-    "NEXT_PUBLIC_CDP_CLIENT_API_KEY": "@cdp_client_api_key",
-    "NEXTAUTH_SECRET": "@nextauth_secret",
-    "NEXTAUTH_URL": "@nextauth_url",
-    "GOLDSKY_API_KEY": "@goldsky_api_key",
-    "GOLDSKY_ENDPOINT": "@goldsky_endpoint"
-  }
+  "regions": ["hnd1"]
 }
